--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -4,7 +4,7 @@ metadata:
   name: cluster-git
 spec:
   generators:
-    # matrix 'parent' generator
+    ## matrix 'parent' generator
     - matrix:
         generators:
           # git generator, 'child' #1
